--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flutter_native_splash: ^2.4.4
   stylish_bottom_bar: ^1.1.0
+  phosphor_flutter: ^2.1.0
 
 dev_dependencies:
   flutter_test:
