--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_native_splash: ^2.4.4
   stylish_bottom_bar: ^1.1.0
   phosphor_flutter: ^2.1.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
