--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   get: ^4.7.2
-  http: ^1.3.0
+  http: ^1.4.0
   flutter_dotenv: ^5.2.1
   flutter_native_splash: ^2.4.4
   stylish_bottom_bar: ^1.1.0
@@ -65,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/images/logo.webp
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
